--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "config": "^3.3.12",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.9.0",
