--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
     "mongose": "^0.0.2-security",
+    "ms": "^2.1.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "zod": "^3.23.8"
@@ -36,6 +39,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/config": "^3.3.5",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/lodash": "^4.17.7"
+    "@types/lodash": "^4.17.7",
+    "@types/ms": "^2.1.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8"
   }
 }
